--- a/Travel.css
+++ b/Travel.css
@@ -4,7 +4,7 @@
 }
 .main{
    
-    background-image: url(../Travelling/backg1.jpg);
+    background-image: url(/beach.jpg);
     width: 100%;
     height: 100%;
     background-position: center;
